tests/compile_fail/first_required.stderr
error: Must specify value for non-defaulted argument: `a`
 --> $DIR/first_required.rs:3:1
  |
3 | #[named(defaults(b = false))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
9 |     let _ = or!();
  |             ----- in this macro invocation
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
